--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,42 +5,42 @@ on:
     branches: [main, develop]
   pull_request:
     branches: [main]
+  workflow_dispatch:
 
 permissions:
   contents: read
-  issues: write
 
 jobs:
-  lint:
+  shellcheck:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: pip
-      - run: pip install ruff && ruff check .
+      - name: Install ShellCheck
+        run: sudo apt-get install -y shellcheck
+      - name: Lint sashi CLI
+        run: shellcheck -x -s bash sashi || true
+      - name: Lint lib scripts
+        run: find lib/ -name '*.sh' -exec shellcheck -x -s bash {} + 2>/dev/null || true
 
-  test:
-    needs: lint
+  docker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-          cache: pip
-      - run: |
-          pip install -r requirements.txt 2>/dev/null || true
-          pip install pytest pytest-cov
-          pytest --cov=. --cov-report=term-missing 2>/dev/null || echo "Tests pending"
+      - name: Build image
+        run: docker build -t kanban-pmo:test .
+      - name: Validate compose
+        run: docker compose config --quiet
 
-  build:
-    needs: test
+  structure:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Build check
+      - name: Validate kanban board dirs
         run: |
-          echo "Build validation passed"
-          python -c "import ast; import pathlib; [ast.parse(f.read_text()) for f in pathlib.Path('.').rglob('*.py')]" 2>/dev/null || true
+          for dir in kanban/backlog kanban/open kanban/wip kanban/closed; do
+            test -d "$dir" && echo "OK: $dir" || echo "MISSING: $dir"
+          done
+      - name: Check sashi executable
+        run: test -x sashi && bash -n sashi
+      - name: Validate install script
+        run: bash -n install.sh
