kanban: v3.1.0 board, workflows.ini engine, milestones, 12 VER test cases

--- a/config/state.ini
+++ b/config/state.ini
@@ -5,24 +5,39 @@ runtime.status = pending
 monitor.status = pending
 
 [kanban]
-backlog.count = 3
-open.count = 2
-wip.count = 2
-closed.count = 2
+backlog.count = 5
+open.count = 0
+wip.count = 7
+closed.count = 0
+tests.count = 12
+
+[workflows]
+total = 12
+enabled = 10
+disabled = 2
+ini = config/workflows/workflows.ini
+dispatch = config/workflows/dispatch.sh
 
 [cmmi]
 req.status = done
-plan.status = wip
-proc.status = pending
+plan.status = done
+proc.status = wip
 cfg.status = done
 ver.status = pending
 
 [progress]
 bar.width = 180
-bar.percent = 30
+bar.percent = 42
+
+[sprint]
+current = S00
+type = pre-season
+window = 2026-02-17 / 2026-02-28
+cadence = 1-week
+total_sprints = 52
+fy = 2026-27
 
 [meta]
 author = tmdev012
-curator = Claude Opus 4.5
-version = 0.1.0
-updated = 2026-02-07
+version = 3.1.0
+updated = 2026-02-17
